// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DateInput has custom yearMax and yearMin 1`] = `
<div
  className="ds-l-form-row ds-u-align-items--end"
>
  <TextField
    aria-describedby="1"
    className="ds-l-col--auto"
    errorPlacement="bottom"
    fieldClassName="ds-c-field--month"
    inputRef={[Function]}
    label="Month"
    labelClassName="ds-c-datefield__label"
    name="month"
    numeric={true}
    type="text"
  />
  <span
    className="ds-c-datefield__separator"
  >
    /
  </span>
  <TextField
    aria-describedby="1"
    className="ds-l-col--auto"
    errorPlacement="bottom"
    fieldClassName="ds-c-field--day"
    inputRef={[Function]}
    label="Day"
    labelClassName="ds-c-datefield__label"
    name="day"
    numeric={true}
    type="text"
  />
  <span
    className="ds-c-datefield__separator"
  >
    /
  </span>
  <TextField
    aria-describedby="1"
    className="ds-l-col--auto"
    errorPlacement="bottom"
    fieldClassName="ds-c-field--year"
    inputRef={[Function]}
    label="year"
    labelClassName="ds-c-datefield__label"
    name="Year"
    numeric={true}
    type="text"
  />
</div>
`;

exports[`DateInput has invalid day 1`] = `
<div
  className="ds-l-form-row ds-u-align-items--end"
>
  <TextField
    aria-describedby="1"
    className="ds-l-col--auto"
    errorPlacement="bottom"
    fieldClassName="ds-c-field--month"
    inputRef={[Function]}
    label="Month"
    labelClassName="ds-c-datefield__label"
    name="month"
    numeric={true}
    type="text"
  />
  <span
    className="ds-c-datefield__separator"
  >
    /
  </span>
  <TextField
    aria-describedby="1"
    className="ds-l-col--auto"
    errorPlacement="bottom"
    fieldClassName="ds-c-field--day"
    inputRef={[Function]}
    label="Day"
    labelClassName="ds-c-datefield__label"
    name="day"
    numeric={true}
    type="text"
  />
  <span
    className="ds-c-datefield__separator"
  >
    /
  </span>
  <TextField
    aria-describedby="1"
    className="ds-l-col--auto"
    errorPlacement="bottom"
    fieldClassName="ds-c-field--year"
    inputRef={[Function]}
    label="year"
    labelClassName="ds-c-datefield__label"
    name="Year"
    numeric={true}
    type="text"
  />
</div>
`;

exports[`DateInput has invalid month 1`] = `
<div
  className="ds-l-form-row ds-u-align-items--end"
>
  <TextField
    aria-describedby="1"
    className="ds-l-col--auto"
    errorPlacement="bottom"
    fieldClassName="ds-c-field--month"
    inputRef={[Function]}
    label="Month"
    labelClassName="ds-c-datefield__label"
    name="month"
    numeric={true}
    type="text"
  />
  <span
    className="ds-c-datefield__separator"
  >
    /
  </span>
  <TextField
    aria-describedby="1"
    className="ds-l-col--auto"
    errorPlacement="bottom"
    fieldClassName="ds-c-field--day"
    inputRef={[Function]}
    label="Day"
    labelClassName="ds-c-datefield__label"
    name="day"
    numeric={true}
    type="text"
  />
  <span
    className="ds-c-datefield__separator"
  >
    /
  </span>
  <TextField
    aria-describedby="1"
    className="ds-l-col--auto"
    errorPlacement="bottom"
    fieldClassName="ds-c-field--year"
    inputRef={[Function]}
    label="year"
    labelClassName="ds-c-datefield__label"
    name="Year"
    numeric={true}
    type="text"
  />
</div>
`;

exports[`DateInput has invalid year 1`] = `
<div
  className="ds-l-form-row ds-u-align-items--end"
>
  <TextField
    aria-describedby="1"
    className="ds-l-col--auto"
    errorPlacement="bottom"
    fieldClassName="ds-c-field--month"
    inputRef={[Function]}
    label="Month"
    labelClassName="ds-c-datefield__label"
    name="month"
    numeric={true}
    type="text"
  />
  <span
    className="ds-c-datefield__separator"
  >
    /
  </span>
  <TextField
    aria-describedby="1"
    className="ds-l-col--auto"
    errorPlacement="bottom"
    fieldClassName="ds-c-field--day"
    inputRef={[Function]}
    label="Day"
    labelClassName="ds-c-datefield__label"
    name="day"
    numeric={true}
    type="text"
  />
  <span
    className="ds-c-datefield__separator"
  >
    /
  </span>
  <TextField
    aria-describedby="1"
    className="ds-l-col--auto"
    errorPlacement="bottom"
    fieldClassName="ds-c-field--year"
    inputRef={[Function]}
    label="year"
    labelClassName="ds-c-datefield__label"
    name="Year"
    numeric={true}
    type="text"
  />
</div>
`;

exports[`DateInput is disabled 1`] = `
<div
  className="ds-l-form-row ds-u-align-items--end"
>
  <TextField
    aria-describedby="1"
    className="ds-l-col--auto"
    disabled={true}
    errorPlacement="bottom"
    fieldClassName="ds-c-field--month"
    inputRef={[Function]}
    label="Month"
    labelClassName="ds-c-datefield__label"
    name="month"
    numeric={true}
    type="text"
  />
  <span
    className="ds-c-datefield__separator"
  >
    /
  </span>
  <TextField
    aria-describedby="1"
    className="ds-l-col--auto"
    disabled={true}
    errorPlacement="bottom"
    fieldClassName="ds-c-field--day"
    inputRef={[Function]}
    label="Day"
    labelClassName="ds-c-datefield__label"
    name="day"
    numeric={true}
    type="text"
  />
  <span
    className="ds-c-datefield__separator"
  >
    /
  </span>
  <TextField
    aria-describedby="1"
    className="ds-l-col--auto"
    disabled={true}
    errorPlacement="bottom"
    fieldClassName="ds-c-field--year"
    inputRef={[Function]}
    label="year"
    labelClassName="ds-c-datefield__label"
    name="Year"
    numeric={true}
    type="text"
  />
</div>
`;

exports[`DateInput is inversed 1`] = `
<div
  className="ds-l-form-row ds-u-align-items--end"
>
  <TextField
    aria-describedby="1"
    className="ds-l-col--auto"
    errorPlacement="bottom"
    fieldClassName="ds-c-field--month"
    inputRef={[Function]}
    inversed={true}
    label="Month"
    labelClassName="ds-c-datefield__label"
    name="month"
    numeric={true}
    type="text"
  />
  <span
    className="ds-c-datefield__separator"
  >
    /
  </span>
  <TextField
    aria-describedby="1"
    className="ds-l-col--auto"
    errorPlacement="bottom"
    fieldClassName="ds-c-field--day"
    inputRef={[Function]}
    inversed={true}
    label="Day"
    labelClassName="ds-c-datefield__label"
    name="day"
    numeric={true}
    type="text"
  />
  <span
    className="ds-c-datefield__separator"
  >
    /
  </span>
  <TextField
    aria-describedby="1"
    className="ds-l-col--auto"
    errorPlacement="bottom"
    fieldClassName="ds-c-field--year"
    inputRef={[Function]}
    inversed={true}
    label="year"
    labelClassName="ds-c-datefield__label"
    name="Year"
    numeric={true}
    type="text"
  />
</div>
`;

exports[`DateInput renders with all defaultProps 1`] = `
<div
  className="ds-l-form-row ds-u-align-items--end"
>
  <TextField
    aria-describedby="1"
    className="ds-l-col--auto"
    errorPlacement="bottom"
    fieldClassName="ds-c-field--month"
    inputRef={[Function]}
    label="Month"
    labelClassName="ds-c-datefield__label"
    name="month"
    numeric={true}
    type="text"
  />
  <span
    className="ds-c-datefield__separator"
  >
    /
  </span>
  <TextField
    aria-describedby="1"
    className="ds-l-col--auto"
    errorPlacement="bottom"
    fieldClassName="ds-c-field--day"
    inputRef={[Function]}
    label="Day"
    labelClassName="ds-c-datefield__label"
    name="day"
    numeric={true}
    type="text"
  />
  <span
    className="ds-c-datefield__separator"
  >
    /
  </span>
  <TextField
    aria-describedby="1"
    className="ds-l-col--auto"
    errorPlacement="bottom"
    fieldClassName="ds-c-field--year"
    inputRef={[Function]}
    label="year"
    labelClassName="ds-c-datefield__label"
    name="Year"
    numeric={true}
    type="text"
  />
</div>
`;
